# warp_regression

./: .gitignore  README.md  blog_post.md  pyproject.toml  requirements.txt
configs/: bitcoin.yaml  lynx.yaml  lynx_linear.yaml  sunspots.yaml  sunspots_linear.yaml  synthetic.yaml
examples/: __init__.py
examples/html/: 0_Warp_Block_Basics.html  1_Introduction_to_Warp_Regression.html  2_Adding_complexity_Lynx_Forecast.html  3_Bitcoin_Warp.html  4_Fully_Bayesian.html  5_Marketing_Mix_Model_Warped_Effects.html
examples/models/: __init__.py  bitcoin.yaml  lynx.yaml  lynx_linear.yaml  synthetic.yaml
examples/notebooks/: 0_Warp_Block_Basics.ipynb  1_Introduction_to_Warp_Regression.ipynb  2_Adding_complexity_Lynx_Forecast.ipynb  3_Bitcoin_Warp.ipynb  4_Fully_Bayesian.ipynb  5_Marketing_Mix_Model_Warped_Effects.ipynb
examples/utils/: __init__.py  data.py  eval.py  fits.py
legacy/: README.md
legacy/info/: comparable_methods.md  soft_warping.md
notebooks/: 1_Example_Network.ipynb  1_Simple_Sine_Wave.ipynb  1_Simple_Sine_Wave_Differentiable.ipynb  WarpPureNumpy.ipynb
src/: linear_basis.py  warp.py  warp_network.py
src/notebooks/: BitcoinWarp.html  BitcoinWarp.ipynb  LynxForecast.html  LynxForecast.ipynb  SunspotsForecast.html  SunspotsForecast.ipynb  WarpDifferentiable.html  WarpDifferentiable.ipynb  train_bitcoin.py
src/tests/: conftest.py  test_bitcoin.py  test_cycle_analysis.py  test_forecast_bands.py  test_forecast_state.py  test_lynx.py  test_predict_realisations.py  test_prefit.py  test_residual_smooth.py  test_sparse_pins_mask.py  test_synthetic.py  test_terminal_kick.py
src/warp_regression/: block.py  (+9 more)
(+29 files in other folders)
