[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "warp_regression"
version = "0.1.0"
description = "Unified warp regression for synthetic, Lynx, and Bitcoin forecasting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22",
    "pandas>=1.4",
    "torch>=2.0",
    "matplotlib>=3.5",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "nbconvert>=7.0", "ipykernel>=6.0"]
bayes = [
    "pymc>=5.10",
    "jax>=0.4",
    "jaxlib>=0.4",
    "numpyro>=0.13",
    "arviz>=0.16",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["warp_regression*"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src", "examples", "."]
markers = [
    "slow: full-epoch reproduction (Bitcoin 24k epochs)",
]
